--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <div class="main ui text container">
       <h1 class="ui dividing centered header">Most Popular Products</h1>
-      <h2 class="ui dividing centered header">Most Popular Products</h1>
+      <h3 class="ui dividing centered header subheader">Upvote selections. Sort by ASC/DESC # of votes.</h3>
       <div id="content"></div>
     </div>
     <script src="./data.js"></script>
